# openai-api-blueprint

./: .env.example  .gitignore  Dockerfile  README.md  development_plan.md  docker-compose.yaml  project_structure.md  pyproject.toml
.github/workflows/: ci.yaml
src/openai_api_blueprint/: __init__.py  main.py
src/openai_api_blueprint/api/v1/: router.py
src/openai_api_blueprint/api/v1/endpoints/: chat.py  models.py
src/openai_api_blueprint/core/: config.py  deps.py  errors.py  security.py
src/openai_api_blueprint/models/: __init__.py  openai.py
src/openai_api_blueprint/services/: chat_service.py  model_service.py
src/openai_api_blueprint/utils/: stream.py
tests/: conftest.py
tests/api/v1/: test_chat.py  test_models.py
tests/docker/: verify-docker.sh  verify-healthcheck.sh
tests/services/: test_chat_service.py  test_model_service.py
